Fix spacing mistakes

--- a/css/main.css
+++ b/css/main.css
@@ -44,11 +44,6 @@ a:hover {
   color: #b42885;
 }
 
-.logoimage {
-  display: block;
-  margin: 30px 15px;
-}
-
 .two, .three {
   margin-top: 4px;
   padding: 0;
